// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`spread.mdx - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C {...props} />

<C {...   props} />

<C {...call(   a, b)} />

<C { ...props } />

<C {...props}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...props} />

<C a="1" {...rest} b={2} />

<a {...b,c} d />

<C {...(a,b)} />

<C {...functionCallWithVeryLongName(argumentNumberOne, argumentNumberTwo, argumentNumberThree)} />

<C {...{longPropertyNameOne: valueNumberOne, longPropertyNameTwo: valueNumberTwo, longPropertyNameThree: valueNumberThree}} />

<C {...{
  a: 1, b: 2 }} />

a <b {...c} /> d

- item
  <C {...props} />

=====================================output=====================================
<C {...props} />

<C {...   props} />

<C {...call(   a, b)} />

<C {...props} />

<C {...props}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...props} />

<C a="1" {...rest} b={2} />

<a {...b,c} d />

<C {...(a,b)} />

<C
  {...functionCallWithVeryLongName(argumentNumberOne, argumentNumberTwo, argumentNumberThree)}
/>

<C
  {...{longPropertyNameOne: valueNumberOne, longPropertyNameTwo: valueNumberTwo, longPropertyNameThree: valueNumberThree}}
/>

<C {...{
a: 1, b: 2 }} />

a <b {...c} /> d

- item
  <C {...props} />

================================================================================
`;

exports[`spread.mdx - {"objectWrap":"preserve"} format 1`] = `
====================================options=====================================
objectWrap: "preserve"
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C {...props} />

<C {...   props} />

<C {...call(   a, b)} />

<C { ...props } />

<C {...props}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...props} />

<C a="1" {...rest} b={2} />

<a {...b,c} d />

<C {...(a,b)} />

<C {...functionCallWithVeryLongName(argumentNumberOne, argumentNumberTwo, argumentNumberThree)} />

<C {...{longPropertyNameOne: valueNumberOne, longPropertyNameTwo: valueNumberTwo, longPropertyNameThree: valueNumberThree}} />

<C {...{
  a: 1, b: 2 }} />

a <b {...c} /> d

- item
  <C {...props} />

=====================================output=====================================
<C {...props} />

<C {...props} />

<C {...call(a, b)} />

<C {...props} />

<C {...props}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...props} />

<C a="1" {...rest} b={2} />

<a {...b,c} d />

<C {...(a, b)} />

<C
  {...functionCallWithVeryLongName(
    argumentNumberOne,
    argumentNumberTwo,
    argumentNumberThree,
  )}
/>

<C
  {...{
    longPropertyNameOne: valueNumberOne,
    longPropertyNameTwo: valueNumberTwo,
    longPropertyNameThree: valueNumberThree,
  }}
/>

<C
  {...{
    a: 1,
    b: 2,
  }}
/>

a <b {...c} /> d

- item
  <C {...props} />

================================================================================
`;

exports[`spread.mdx - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["mdx"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
<C {...props} />

<C {...   props} />

<C {...call(   a, b)} />

<C { ...props } />

<C {...props}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...props} />

<C a="1" {...rest} b={2} />

<a {...b,c} d />

<C {...(a,b)} />

<C {...functionCallWithVeryLongName(argumentNumberOne, argumentNumberTwo, argumentNumberThree)} />

<C {...{longPropertyNameOne: valueNumberOne, longPropertyNameTwo: valueNumberTwo, longPropertyNameThree: valueNumberThree}} />

<C {...{
  a: 1, b: 2 }} />

a <b {...c} /> d

- item
  <C {...props} />

=====================================output=====================================
<C {...props} />

<C {...props} />

<C {...call(a, b)} />

<C {...props} />

<C {...props}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...props} />

<C a="1" {...rest} b={2} />

<a {...b,c} d />

<C {...(a, b)} />

<C
  {...functionCallWithVeryLongName(
    argumentNumberOne,
    argumentNumberTwo,
    argumentNumberThree,
  )}
/>

<C
  {...{
    longPropertyNameOne: valueNumberOne,
    longPropertyNameTwo: valueNumberTwo,
    longPropertyNameThree: valueNumberThree,
  }}
/>

<C
  {...{
    a: 1,
    b: 2,
  }}
/>

a <b {...c} /> d

- item
  <C {...props} />

================================================================================
`;

exports[`spread.mdx format 1`] = `
====================================options=====================================
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C {...props} />

<C {...   props} />

<C {...call(   a, b)} />

<C { ...props } />

<C {...props}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...props} />

<C a="1" {...rest} b={2} />

<a {...b,c} d />

<C {...(a,b)} />

<C {...functionCallWithVeryLongName(argumentNumberOne, argumentNumberTwo, argumentNumberThree)} />

<C {...{longPropertyNameOne: valueNumberOne, longPropertyNameTwo: valueNumberTwo, longPropertyNameThree: valueNumberThree}} />

<C {...{
  a: 1, b: 2 }} />

a <b {...c} /> d

- item
  <C {...props} />

=====================================output=====================================
<C {...props} />

<C {...props} />

<C {...call(a, b)} />

<C {...props} />

<C {...props}>text</C>

<C {...a.b.c} />

<C {/* comment */ ...props} />

<C a="1" {...rest} b={2} />

<a {...b,c} d />

<C {...(a, b)} />

<C
  {...functionCallWithVeryLongName(
    argumentNumberOne,
    argumentNumberTwo,
    argumentNumberThree,
  )}
/>

<C
  {...{
    longPropertyNameOne: valueNumberOne,
    longPropertyNameTwo: valueNumberTwo,
    longPropertyNameThree: valueNumberThree,
  }}
/>

<C
  {...{
    a: 1,
    b: 2,
  }}
/>

a <b {...c} /> d

- item
  <C {...props} />

================================================================================
`;
